// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns the expected query for multiple ids 1`] = `
"WITH
TARGET_LOCATION AS (
  SELECT
    LOCATION.LOCATION_ID,
    LOCATION.FEATURE_PK,
    FEATURE.FEATURE_NAME
  FROM AHBRP.LOCATION LOCATION
  JOIN AHBRP.FEATURE FEATURE
    ON FEATURE.FEATURE_PK = LOCATION.FEATURE_PK
  WHERE LOCATION.LOCATION_ID IN ('L97339', 'L97340')
),
TARGET_PRIMARY_ASSET_LOCATION AS (
  SELECT
    AL.FEATURE_PK,
    AL.ASSET_PK
  FROM TARGET_LOCATION LOCATION
  JOIN AHBRP.ASSET_LOCATION AL
    ON AL.FEATURE_PK = LOCATION.FEATURE_PK
  WHERE AL.ASSET_LOCATION_TO_DATE IS NULL
    AND AL.ASSET_LOCATION_TYPE = 'PRIMARYLOCATION'
),
TARGET_LIVESTOCK_ASSET AS (
  SELECT DISTINCT
    AL.ASSET_PK
  FROM TARGET_PRIMARY_ASSET_LOCATION AL
  JOIN AHBRP.LIVESTOCK_UNIT LU
    ON LU.ASSET_PK = AL.ASSET_PK
),
TARGET_FACILITY_ASSET AS (
  SELECT DISTINCT
    AL.ASSET_PK
  FROM TARGET_PRIMARY_ASSET_LOCATION AL
  JOIN AHBRP.FACILITY FACILITY
    ON FACILITY.ASSET_PK = AL.ASSET_PK
),
LU_SPECIES AS (
  SELECT
    ASSET.ASSET_PK,
    RDCD.SHORT_DESCRIPTION
  FROM TARGET_LIVESTOCK_ASSET TLA
  JOIN AHBRP.ASSET
    ON ASSET.ASSET_PK = TLA.ASSET_PK
  JOIN AHBRP.ANIMAL
    ON ANIMAL.ANIMAL_PK = ASSET.ANIMAL_PK
  JOIN AHBRP.ANIMAL_SPECIES
    ON ANIMAL_SPECIES.ANIMAL_SPECIES_PK = ANIMAL.ANIMAL_SPECIES_PK
   AND ANIMAL_SPECIES.ANIMAL_SPECIES_TO_DATE IS NULL
  JOIN AHBRP.REF_DATA_SET RDF
    ON RDF.REF_DATA_SET_NAME = 'ANIMAL_SPECIES'
   AND RDF.EFFECTIVE_TO_DATE IS NULL
  JOIN AHBRP.REF_DATA_CODE RDC
    ON RDC.REF_DATA_SET_PK = RDF.REF_DATA_SET_PK
   AND RDC.CODE = ANIMAL_SPECIES.ANIMAL_SPECIES_CODE
   AND RDC.EFFECTIVE_TO_DATE = '31-DEC-9999'
  JOIN AHBRP.REF_DATA_CODE_DESC RDCD
    ON RDCD.REF_DATA_CODE_PK = RDC.REF_DATA_CODE_PK
   AND RDCD.LANGUAGE_CODE = 'ENG'
),
FACILITY_BUS AS (
  SELECT
    FACILITY.ASSET_PK,
    RDCDT.SHORT_DESCRIPTION FACILITY_TYPE,
    RDCDBA.SHORT_DESCRIPTION BUSINESS_ACTIVITY
  FROM TARGET_FACILITY_ASSET TFA
  JOIN AHBRP.FACILITY
    ON FACILITY.ASSET_PK = TFA.ASSET_PK
  JOIN AHBRP.FACILITY_BUSINESS_ACTIVTY FBA
    ON FBA.FACILITY_BUSINESS_ACTIVTY_PK = FACILITY.FACILITY_BUSINESS_ACTIVTY_PK
  JOIN AHBRP.FACILITY_TYPE FT
    ON FT.FACILITY_TYPE_PK = FBA.FACILITY_TYPE_PK
  JOIN AHBRP.REF_DATA_SET RDST
    ON RDST.REF_DATA_SET_NAME = 'FACILITY_TYPE'
   AND RDST.EFFECTIVE_TO_DATE IS NULL
  JOIN AHBRP.REF_DATA_CODE RDCT
    ON RDCT.REF_DATA_SET_PK = RDST.REF_DATA_SET_PK
   AND RDCT.CODE = FT.FACILITY_TYPE_CODE
   AND RDCT.EFFECTIVE_TO_DATE = '31-DEC-9999'
  JOIN AHBRP.REF_DATA_CODE_DESC RDCDT
    ON RDCDT.REF_DATA_CODE_PK = RDCT.REF_DATA_CODE_PK
   AND RDCDT.LANGUAGE_CODE = 'ENG'
  JOIN AHBRP.REF_DATA_SET RDSBA
    ON RDSBA.REF_DATA_SET_NAME = 'FACILITY_BUSINESS_ACTIVITY'
   AND RDSBA.EFFECTIVE_TO_DATE IS NULL
  JOIN AHBRP.REF_DATA_CODE RDCBA
    ON RDCBA.REF_DATA_SET_PK = RDSBA.REF_DATA_SET_PK
   AND RDCBA.CODE = FBA.FACILITY_BUSINSS_ACTVTY_CODE
   AND RDCBA.EFFECTIVE_TO_DATE = '31-DEC-9999'
  JOIN AHBRP.REF_DATA_CODE_DESC RDCDBA
    ON RDCDBA.REF_DATA_CODE_PK = RDCBA.REF_DATA_CODE_PK
   AND RDCDBA.LANGUAGE_CODE = 'ENG'
),
COUNTY_LOOKUP AS (
  SELECT DISTINCT
    RDC.CODE,
    RDCD.SHORT_DESCRIPTION
  FROM AHBRP.REF_DATA_SET RDS
  JOIN AHBRP.REF_DATA_CODE RDC
    ON RDC.REF_DATA_SET_PK = RDS.REF_DATA_SET_PK
  JOIN AHBRP.REF_DATA_CODE_DESC RDCD
    ON RDCD.REF_DATA_CODE_PK = RDC.REF_DATA_CODE_PK
  WHERE RDS.REF_DATA_SET_NAME = 'COUNTY'
    AND RDS.EFFECTIVE_TO_DATE IS NULL
    AND RDC.EFFECTIVE_TO_DATE = '31-DEC-9999'
    AND RDCD.LANGUAGE_CODE = 'ENG'
)

SELECT
  LOCATION.LOCATION_ID,
  LOCATION.FEATURE_NAME feature_name,
  BA.PAON_START_NUMBER paon_start_number,
  BA.PAON_START_NUMBER_SUFFIX paon_start_number_suffix,
  BA.PAON_END_NUMBER paon_end_number,
  BA.PAON_END_NUMBER_SUFFIX paon_end_number_suffix,
  BA.PAON_DESCRIPTION paon_description,
  BA.SAON_DESCRIPTION saon_description,
  BA.SAON_START_NUMBER saon_start_number,
  BA.SAON_START_NUMBER_SUFFIX saon_start_number_suffix,
  BA.SAON_END_NUMBER saon_end_number,
  BA.SAON_END_NUMBER_SUFFIX saon_end_number_suffix,
  BA.STREET,
  BA.LOCALITY,
  BA.TOWN,
  COUNTY_LOOKUP.SHORT_DESCRIPTION county,
  BA.POSTCODE,
  BA.UK_INTERNAL_CODE uk_internal_code,
  BA.COUNTRY_CODE country_code,
  FP.OS_MAP_REFERENCE os_map_reference,
  CASE WHEN ASSET.ASSET_PK IS NULL THEN 'N/A' ELSE 'LU' END unit_type,
  CASE WHEN LU.UNIT_ID IS NULL THEN 'N/A' ELSE LU.UNIT_ID END unit_id,
  CASE WHEN LU_SPECIES.SHORT_DESCRIPTION IS NULL THEN 'N/A' ELSE LU_SPECIES.SHORT_DESCRIPTION END species,
  CRAG.USUAL_QUANTITY_OF_ANIMALS usual_quantity_of_animals,
  'N/A' facility_name,
  'N/A' facility_type,
  'N/A' business_activity,
  FI.CPH cph
FROM TARGET_LOCATION LOCATION
JOIN AHBRP.FEATURE_STATE FS
  ON FS.FEATURE_PK = LOCATION.FEATURE_PK
 AND FS.FEATURE_STATUS_CODE <> 'INACTIVE'
 AND FS.FEATURE_STATE_TO_DTTM IS NULL
LEFT JOIN AHBRP.FEATURE_ADDRESS FA
  ON FA.FEATURE_PK = LOCATION.FEATURE_PK
 AND FA.FEATURE_ADDRESS_TO_DATE IS NULL
LEFT JOIN AHBRP.BS7666_ADDRESS BA
  ON BA.ADDRESS_PK = FA.ADDRESS_PK
LEFT JOIN TARGET_PRIMARY_ASSET_LOCATION AL
  ON AL.FEATURE_PK = LOCATION.FEATURE_PK
LEFT JOIN AHBRP.LIVESTOCK_UNIT LU
  ON LU.ASSET_PK = AL.ASSET_PK
LEFT JOIN AHBRP.ASSET_STATE ASS
  ON ASS.ASSET_PK = LU.ASSET_PK
 AND ASS.ASSET_STATUS_CODE <> 'INACTIVE'
 AND ASS.ASSET_STATE_TO_DTTM IS NULL
LEFT JOIN AHBRP.ASSET
  ON ASSET.ASSET_PK = LU.ASSET_PK
LEFT JOIN AHBRP.COLL_REGSTRD_ANIMAL_GROUP CRAG
  ON CRAG.ANIMAL_PK = ASSET.ANIMAL_PK
LEFT JOIN LU_SPECIES
  ON LU_SPECIES.ASSET_PK = ASSET.ASSET_PK
LEFT JOIN AHBRP.FEATURE_POINT FP
  ON FP.FEATURE_PK = LOCATION.FEATURE_PK
 AND FP.PRIMARY_FEATURE_POINT_IND = 'Y'
 AND FP.FEATURE_POINT_TO_DATE IS NULL
LEFT JOIN AHBRP.FEATURE_INVOLVEMENT FI
  ON FI.FEATURE_PK = LOCATION.FEATURE_PK
 AND FI.FEATURE_INVOLVEMENT_TYPE = 'CPHHOLDERSHIP'
 AND FI.FEATURE_INVOLV_TO_DATE IS NULL
LEFT JOIN COUNTY_LOOKUP
  ON COUNTY_LOOKUP.CODE = BA.ADMINISTRATIVE_AREA

UNION ALL

SELECT
  LOCATION.LOCATION_ID,
  LOCATION.FEATURE_NAME feature_name,
  BA.PAON_START_NUMBER paon_start_number,
  BA.PAON_START_NUMBER_SUFFIX paon_start_number_suffix,
  BA.PAON_END_NUMBER paon_end_number,
  BA.PAON_END_NUMBER_SUFFIX paon_end_number_suffix,
  BA.PAON_DESCRIPTION paon_description,
  BA.SAON_DESCRIPTION saon_description,
  BA.SAON_START_NUMBER saon_start_number,
  BA.SAON_START_NUMBER_SUFFIX saon_start_number_suffix,
  BA.SAON_END_NUMBER saon_end_number,
  BA.SAON_END_NUMBER_SUFFIX saon_end_number_suffix,
  BA.STREET,
  BA.LOCALITY,
  BA.TOWN,
  COUNTY_LOOKUP.SHORT_DESCRIPTION county,
  BA.POSTCODE,
  BA.UK_INTERNAL_CODE uk_internal_code,
  BA.COUNTRY_CODE country_code,
  FP.OS_MAP_REFERENCE os_map_reference,
  CASE WHEN ASSET.ASSET_PK IS NULL THEN 'N/A' ELSE 'F' END unit_type,
  CASE WHEN FACILITY.UNIT_ID IS NULL THEN 'N/A' ELSE FACILITY.UNIT_ID END unit_id,
  'N/A' species,
  CRAG.USUAL_QUANTITY_OF_ANIMALS usual_quantity_of_animals,
  CASE WHEN FACILITY.FACILITY_NAME IS NULL THEN 'N/A' ELSE FACILITY.FACILITY_NAME END facility_name,
  CASE WHEN FACILITY_BUS.FACILITY_TYPE IS NULL THEN 'N/A' ELSE FACILITY_BUS.FACILITY_TYPE END facility_type,
  CASE WHEN FACILITY_BUS.BUSINESS_ACTIVITY IS NULL THEN 'N/A' ELSE FACILITY_BUS.BUSINESS_ACTIVITY END business_activity,
  FI.CPH cph
FROM TARGET_LOCATION LOCATION
JOIN AHBRP.FEATURE_STATE FS
  ON FS.FEATURE_PK = LOCATION.FEATURE_PK
 AND FS.FEATURE_STATUS_CODE <> 'INACTIVE'
 AND FS.FEATURE_STATE_TO_DTTM IS NULL
LEFT JOIN AHBRP.FEATURE_ADDRESS FA
  ON FA.FEATURE_PK = LOCATION.FEATURE_PK
 AND FA.FEATURE_ADDRESS_TO_DATE IS NULL
LEFT JOIN AHBRP.BS7666_ADDRESS BA
  ON BA.ADDRESS_PK = FA.ADDRESS_PK
LEFT JOIN TARGET_PRIMARY_ASSET_LOCATION AL
  ON AL.FEATURE_PK = LOCATION.FEATURE_PK
LEFT JOIN AHBRP.FACILITY
  ON FACILITY.ASSET_PK = AL.ASSET_PK
LEFT JOIN AHBRP.ASSET_STATE ASS
  ON ASS.ASSET_PK = FACILITY.ASSET_PK
 AND ASS.ASSET_STATUS_CODE <> 'INACTIVE'
 AND ASS.ASSET_STATE_TO_DTTM IS NULL
LEFT JOIN FACILITY_BUS
  ON FACILITY_BUS.ASSET_PK = ASS.ASSET_PK
LEFT JOIN AHBRP.ASSET
  ON ASSET.ASSET_PK = FACILITY.ASSET_PK
LEFT JOIN AHBRP.COLL_REGSTRD_ANIMAL_GROUP CRAG
  ON CRAG.ANIMAL_PK = ASSET.ANIMAL_PK
LEFT JOIN AHBRP.FEATURE_POINT FP
  ON FP.FEATURE_PK = LOCATION.FEATURE_PK
 AND FP.PRIMARY_FEATURE_POINT_IND = 'Y'
 AND FP.FEATURE_POINT_TO_DATE IS NULL
LEFT JOIN AHBRP.FEATURE_INVOLVEMENT FI
  ON FI.FEATURE_PK = LOCATION.FEATURE_PK
 AND FI.FEATURE_INVOLVEMENT_TYPE = 'CPHHOLDERSHIP'
 AND FI.FEATURE_INVOLV_TO_DATE IS NULL
LEFT JOIN COUNTY_LOOKUP
  ON COUNTY_LOOKUP.CODE = BA.ADMINISTRATIVE_AREA
"
`;

exports[`returns the expected query for valid parameters 1`] = `
"WITH
TARGET_LOCATION AS (
  SELECT
    LOCATION.LOCATION_ID,
    LOCATION.FEATURE_PK,
    FEATURE.FEATURE_NAME
  FROM AHBRP.LOCATION LOCATION
  JOIN AHBRP.FEATURE FEATURE
    ON FEATURE.FEATURE_PK = LOCATION.FEATURE_PK
  WHERE LOCATION.LOCATION_ID IN ('L97339')
),
TARGET_PRIMARY_ASSET_LOCATION AS (
  SELECT
    AL.FEATURE_PK,
    AL.ASSET_PK
  FROM TARGET_LOCATION LOCATION
  JOIN AHBRP.ASSET_LOCATION AL
    ON AL.FEATURE_PK = LOCATION.FEATURE_PK
  WHERE AL.ASSET_LOCATION_TO_DATE IS NULL
    AND AL.ASSET_LOCATION_TYPE = 'PRIMARYLOCATION'
),
TARGET_LIVESTOCK_ASSET AS (
  SELECT DISTINCT
    AL.ASSET_PK
  FROM TARGET_PRIMARY_ASSET_LOCATION AL
  JOIN AHBRP.LIVESTOCK_UNIT LU
    ON LU.ASSET_PK = AL.ASSET_PK
),
TARGET_FACILITY_ASSET AS (
  SELECT DISTINCT
    AL.ASSET_PK
  FROM TARGET_PRIMARY_ASSET_LOCATION AL
  JOIN AHBRP.FACILITY FACILITY
    ON FACILITY.ASSET_PK = AL.ASSET_PK
),
LU_SPECIES AS (
  SELECT
    ASSET.ASSET_PK,
    RDCD.SHORT_DESCRIPTION
  FROM TARGET_LIVESTOCK_ASSET TLA
  JOIN AHBRP.ASSET
    ON ASSET.ASSET_PK = TLA.ASSET_PK
  JOIN AHBRP.ANIMAL
    ON ANIMAL.ANIMAL_PK = ASSET.ANIMAL_PK
  JOIN AHBRP.ANIMAL_SPECIES
    ON ANIMAL_SPECIES.ANIMAL_SPECIES_PK = ANIMAL.ANIMAL_SPECIES_PK
   AND ANIMAL_SPECIES.ANIMAL_SPECIES_TO_DATE IS NULL
  JOIN AHBRP.REF_DATA_SET RDF
    ON RDF.REF_DATA_SET_NAME = 'ANIMAL_SPECIES'
   AND RDF.EFFECTIVE_TO_DATE IS NULL
  JOIN AHBRP.REF_DATA_CODE RDC
    ON RDC.REF_DATA_SET_PK = RDF.REF_DATA_SET_PK
   AND RDC.CODE = ANIMAL_SPECIES.ANIMAL_SPECIES_CODE
   AND RDC.EFFECTIVE_TO_DATE = '31-DEC-9999'
  JOIN AHBRP.REF_DATA_CODE_DESC RDCD
    ON RDCD.REF_DATA_CODE_PK = RDC.REF_DATA_CODE_PK
   AND RDCD.LANGUAGE_CODE = 'ENG'
),
FACILITY_BUS AS (
  SELECT
    FACILITY.ASSET_PK,
    RDCDT.SHORT_DESCRIPTION FACILITY_TYPE,
    RDCDBA.SHORT_DESCRIPTION BUSINESS_ACTIVITY
  FROM TARGET_FACILITY_ASSET TFA
  JOIN AHBRP.FACILITY
    ON FACILITY.ASSET_PK = TFA.ASSET_PK
  JOIN AHBRP.FACILITY_BUSINESS_ACTIVTY FBA
    ON FBA.FACILITY_BUSINESS_ACTIVTY_PK = FACILITY.FACILITY_BUSINESS_ACTIVTY_PK
  JOIN AHBRP.FACILITY_TYPE FT
    ON FT.FACILITY_TYPE_PK = FBA.FACILITY_TYPE_PK
  JOIN AHBRP.REF_DATA_SET RDST
    ON RDST.REF_DATA_SET_NAME = 'FACILITY_TYPE'
   AND RDST.EFFECTIVE_TO_DATE IS NULL
  JOIN AHBRP.REF_DATA_CODE RDCT
    ON RDCT.REF_DATA_SET_PK = RDST.REF_DATA_SET_PK
   AND RDCT.CODE = FT.FACILITY_TYPE_CODE
   AND RDCT.EFFECTIVE_TO_DATE = '31-DEC-9999'
  JOIN AHBRP.REF_DATA_CODE_DESC RDCDT
    ON RDCDT.REF_DATA_CODE_PK = RDCT.REF_DATA_CODE_PK
   AND RDCDT.LANGUAGE_CODE = 'ENG'
  JOIN AHBRP.REF_DATA_SET RDSBA
    ON RDSBA.REF_DATA_SET_NAME = 'FACILITY_BUSINESS_ACTIVITY'
   AND RDSBA.EFFECTIVE_TO_DATE IS NULL
  JOIN AHBRP.REF_DATA_CODE RDCBA
    ON RDCBA.REF_DATA_SET_PK = RDSBA.REF_DATA_SET_PK
   AND RDCBA.CODE = FBA.FACILITY_BUSINSS_ACTVTY_CODE
   AND RDCBA.EFFECTIVE_TO_DATE = '31-DEC-9999'
  JOIN AHBRP.REF_DATA_CODE_DESC RDCDBA
    ON RDCDBA.REF_DATA_CODE_PK = RDCBA.REF_DATA_CODE_PK
   AND RDCDBA.LANGUAGE_CODE = 'ENG'
),
COUNTY_LOOKUP AS (
  SELECT DISTINCT
    RDC.CODE,
    RDCD.SHORT_DESCRIPTION
  FROM AHBRP.REF_DATA_SET RDS
  JOIN AHBRP.REF_DATA_CODE RDC
    ON RDC.REF_DATA_SET_PK = RDS.REF_DATA_SET_PK
  JOIN AHBRP.REF_DATA_CODE_DESC RDCD
    ON RDCD.REF_DATA_CODE_PK = RDC.REF_DATA_CODE_PK
  WHERE RDS.REF_DATA_SET_NAME = 'COUNTY'
    AND RDS.EFFECTIVE_TO_DATE IS NULL
    AND RDC.EFFECTIVE_TO_DATE = '31-DEC-9999'
    AND RDCD.LANGUAGE_CODE = 'ENG'
)

SELECT
  LOCATION.LOCATION_ID,
  LOCATION.FEATURE_NAME feature_name,
  BA.PAON_START_NUMBER paon_start_number,
  BA.PAON_START_NUMBER_SUFFIX paon_start_number_suffix,
  BA.PAON_END_NUMBER paon_end_number,
  BA.PAON_END_NUMBER_SUFFIX paon_end_number_suffix,
  BA.PAON_DESCRIPTION paon_description,
  BA.SAON_DESCRIPTION saon_description,
  BA.SAON_START_NUMBER saon_start_number,
  BA.SAON_START_NUMBER_SUFFIX saon_start_number_suffix,
  BA.SAON_END_NUMBER saon_end_number,
  BA.SAON_END_NUMBER_SUFFIX saon_end_number_suffix,
  BA.STREET,
  BA.LOCALITY,
  BA.TOWN,
  COUNTY_LOOKUP.SHORT_DESCRIPTION county,
  BA.POSTCODE,
  BA.UK_INTERNAL_CODE uk_internal_code,
  BA.COUNTRY_CODE country_code,
  FP.OS_MAP_REFERENCE os_map_reference,
  CASE WHEN ASSET.ASSET_PK IS NULL THEN 'N/A' ELSE 'LU' END unit_type,
  CASE WHEN LU.UNIT_ID IS NULL THEN 'N/A' ELSE LU.UNIT_ID END unit_id,
  CASE WHEN LU_SPECIES.SHORT_DESCRIPTION IS NULL THEN 'N/A' ELSE LU_SPECIES.SHORT_DESCRIPTION END species,
  CRAG.USUAL_QUANTITY_OF_ANIMALS usual_quantity_of_animals,
  'N/A' facility_name,
  'N/A' facility_type,
  'N/A' business_activity,
  FI.CPH cph
FROM TARGET_LOCATION LOCATION
JOIN AHBRP.FEATURE_STATE FS
  ON FS.FEATURE_PK = LOCATION.FEATURE_PK
 AND FS.FEATURE_STATUS_CODE <> 'INACTIVE'
 AND FS.FEATURE_STATE_TO_DTTM IS NULL
LEFT JOIN AHBRP.FEATURE_ADDRESS FA
  ON FA.FEATURE_PK = LOCATION.FEATURE_PK
 AND FA.FEATURE_ADDRESS_TO_DATE IS NULL
LEFT JOIN AHBRP.BS7666_ADDRESS BA
  ON BA.ADDRESS_PK = FA.ADDRESS_PK
LEFT JOIN TARGET_PRIMARY_ASSET_LOCATION AL
  ON AL.FEATURE_PK = LOCATION.FEATURE_PK
LEFT JOIN AHBRP.LIVESTOCK_UNIT LU
  ON LU.ASSET_PK = AL.ASSET_PK
LEFT JOIN AHBRP.ASSET_STATE ASS
  ON ASS.ASSET_PK = LU.ASSET_PK
 AND ASS.ASSET_STATUS_CODE <> 'INACTIVE'
 AND ASS.ASSET_STATE_TO_DTTM IS NULL
LEFT JOIN AHBRP.ASSET
  ON ASSET.ASSET_PK = LU.ASSET_PK
LEFT JOIN AHBRP.COLL_REGSTRD_ANIMAL_GROUP CRAG
  ON CRAG.ANIMAL_PK = ASSET.ANIMAL_PK
LEFT JOIN LU_SPECIES
  ON LU_SPECIES.ASSET_PK = ASSET.ASSET_PK
LEFT JOIN AHBRP.FEATURE_POINT FP
  ON FP.FEATURE_PK = LOCATION.FEATURE_PK
 AND FP.PRIMARY_FEATURE_POINT_IND = 'Y'
 AND FP.FEATURE_POINT_TO_DATE IS NULL
LEFT JOIN AHBRP.FEATURE_INVOLVEMENT FI
  ON FI.FEATURE_PK = LOCATION.FEATURE_PK
 AND FI.FEATURE_INVOLVEMENT_TYPE = 'CPHHOLDERSHIP'
 AND FI.FEATURE_INVOLV_TO_DATE IS NULL
LEFT JOIN COUNTY_LOOKUP
  ON COUNTY_LOOKUP.CODE = BA.ADMINISTRATIVE_AREA

UNION ALL

SELECT
  LOCATION.LOCATION_ID,
  LOCATION.FEATURE_NAME feature_name,
  BA.PAON_START_NUMBER paon_start_number,
  BA.PAON_START_NUMBER_SUFFIX paon_start_number_suffix,
  BA.PAON_END_NUMBER paon_end_number,
  BA.PAON_END_NUMBER_SUFFIX paon_end_number_suffix,
  BA.PAON_DESCRIPTION paon_description,
  BA.SAON_DESCRIPTION saon_description,
  BA.SAON_START_NUMBER saon_start_number,
  BA.SAON_START_NUMBER_SUFFIX saon_start_number_suffix,
  BA.SAON_END_NUMBER saon_end_number,
  BA.SAON_END_NUMBER_SUFFIX saon_end_number_suffix,
  BA.STREET,
  BA.LOCALITY,
  BA.TOWN,
  COUNTY_LOOKUP.SHORT_DESCRIPTION county,
  BA.POSTCODE,
  BA.UK_INTERNAL_CODE uk_internal_code,
  BA.COUNTRY_CODE country_code,
  FP.OS_MAP_REFERENCE os_map_reference,
  CASE WHEN ASSET.ASSET_PK IS NULL THEN 'N/A' ELSE 'F' END unit_type,
  CASE WHEN FACILITY.UNIT_ID IS NULL THEN 'N/A' ELSE FACILITY.UNIT_ID END unit_id,
  'N/A' species,
  CRAG.USUAL_QUANTITY_OF_ANIMALS usual_quantity_of_animals,
  CASE WHEN FACILITY.FACILITY_NAME IS NULL THEN 'N/A' ELSE FACILITY.FACILITY_NAME END facility_name,
  CASE WHEN FACILITY_BUS.FACILITY_TYPE IS NULL THEN 'N/A' ELSE FACILITY_BUS.FACILITY_TYPE END facility_type,
  CASE WHEN FACILITY_BUS.BUSINESS_ACTIVITY IS NULL THEN 'N/A' ELSE FACILITY_BUS.BUSINESS_ACTIVITY END business_activity,
  FI.CPH cph
FROM TARGET_LOCATION LOCATION
JOIN AHBRP.FEATURE_STATE FS
  ON FS.FEATURE_PK = LOCATION.FEATURE_PK
 AND FS.FEATURE_STATUS_CODE <> 'INACTIVE'
 AND FS.FEATURE_STATE_TO_DTTM IS NULL
LEFT JOIN AHBRP.FEATURE_ADDRESS FA
  ON FA.FEATURE_PK = LOCATION.FEATURE_PK
 AND FA.FEATURE_ADDRESS_TO_DATE IS NULL
LEFT JOIN AHBRP.BS7666_ADDRESS BA
  ON BA.ADDRESS_PK = FA.ADDRESS_PK
LEFT JOIN TARGET_PRIMARY_ASSET_LOCATION AL
  ON AL.FEATURE_PK = LOCATION.FEATURE_PK
LEFT JOIN AHBRP.FACILITY
  ON FACILITY.ASSET_PK = AL.ASSET_PK
LEFT JOIN AHBRP.ASSET_STATE ASS
  ON ASS.ASSET_PK = FACILITY.ASSET_PK
 AND ASS.ASSET_STATUS_CODE <> 'INACTIVE'
 AND ASS.ASSET_STATE_TO_DTTM IS NULL
LEFT JOIN FACILITY_BUS
  ON FACILITY_BUS.ASSET_PK = ASS.ASSET_PK
LEFT JOIN AHBRP.ASSET
  ON ASSET.ASSET_PK = FACILITY.ASSET_PK
LEFT JOIN AHBRP.COLL_REGSTRD_ANIMAL_GROUP CRAG
  ON CRAG.ANIMAL_PK = ASSET.ANIMAL_PK
LEFT JOIN AHBRP.FEATURE_POINT FP
  ON FP.FEATURE_PK = LOCATION.FEATURE_PK
 AND FP.PRIMARY_FEATURE_POINT_IND = 'Y'
 AND FP.FEATURE_POINT_TO_DATE IS NULL
LEFT JOIN AHBRP.FEATURE_INVOLVEMENT FI
  ON FI.FEATURE_PK = LOCATION.FEATURE_PK
 AND FI.FEATURE_INVOLVEMENT_TYPE = 'CPHHOLDERSHIP'
 AND FI.FEATURE_INVOLV_TO_DATE IS NULL
LEFT JOIN COUNTY_LOOKUP
  ON COUNTY_LOOKUP.CODE = BA.ADMINISTRATIVE_AREA
"
`;
